--- a/nginx/ieng-nginx.conf
+++ b/nginx/ieng-nginx.conf
@@ -11,7 +11,9 @@ server {
 #	}
 #	location / { try_files $uri @ieng; }
 	location / {
+	    proxy_connect_timeout 500s;
 	    proxy_read_timeout 1200s;
+	    proxy_send_timeout 1200s;
 		include uwsgi_params;
 #		uwsgi_pass unix:/home/namine/www/iEng/nginx/ieng-uwsgi.sock;
 		uwsgi_pass 127.0.0.1:8001;
